# aoc

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
2020/1/: 1.py  2.py
2021/1/: 1.py  2.py
2021/2/: 1.py  2.py
2021/3/: 1.py  2.py
2021/4/: 1.py  2.py
2021/5/: 1.py  2.py
2021/6/: 1.py  2.py
2021/7/: 1.py  2.py
2021/8/: 1.py  2.py
2021/day_1/: 1_rolling_measurement.py
2021/day_2/: 0_coords.py
2021/day_3/: 0_diagnostic.py  1_diagnostic.py
2021/day_4/: 0_bingo.py  1_bingo.py
2021/day_5/: 0_lines.py  1_lines.py
2021/day_6/: 0_fish.py
2021/day_8/: 2.py
2023/1/: 1.py  2.py
2023/2/: 1.py  2.py
2023/3/: 1.ipynb  2.ipynb
2023/4/: 1.ipynb  2.ipynb
2023/5/: 1.ipynb  2.ipynb  2.py  rangemap.py
aoc/: __init__.py  api.py
